--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -31,6 +31,10 @@
         <servlet-name>Login</servlet-name>
         <servlet-class>servlet.Login</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Groups</servlet-name>
+        <servlet-class>servlet.Groups</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Home</servlet-name>
         <url-pattern>/forum</url-pattern>
@@ -38,6 +42,10 @@
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Groups</servlet-name>
+        <url-pattern>/forum/groups</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
