changed GroupX to Group

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,8 +36,8 @@
         <servlet-class>servlet.Groups</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>GroupX</servlet-name>
-        <servlet-class>servlet.GroupX</servlet-class>
+        <servlet-name>Group</servlet-name>
+        <servlet-class>servlet.Group</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>Logout</servlet-name>
@@ -56,8 +56,8 @@
         <url-pattern>/forum/groups</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>GroupX</servlet-name>
-        <url-pattern>/GroupX</url-pattern>
+        <servlet-name>Group</servlet-name>
+        <url-pattern>/Group</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
