adding Post servlet, modified Group servlet and web.xml

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -43,6 +43,10 @@
         <servlet-name>Logout</servlet-name>
         <servlet-class>servlet.Logout</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Post</servlet-name>
+        <servlet-class>servlet.Post</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Home</servlet-name>
         <url-pattern>/forum</url-pattern>
@@ -57,11 +61,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Group</servlet-name>
-        <url-pattern>/Group</url-pattern>
+        <url-pattern>/forum/group</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
         <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Post</servlet-name>
+        <url-pattern>/forum/post</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
