--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,12 +12,44 @@
             filter.LoginFilter
         </filter-class>
     </filter>
+    <filter>
+        <filter-name>
+            GroupManagerFilter
+        </filter-name>
+        <filter-class>
+            filter.GroupManagerFilter
+        </filter-class>
+    </filter>
+    <filter>
+        <filter-name>
+            GroupFilter
+        </filter-name>
+        <filter-class>
+            filter.GroupFilter
+        </filter-class>
+    </filter>
     <filter-mapping>
         <filter-name>
             LoginFilter
         </filter-name>
         <url-pattern>
             /forum/*
+        </url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>
+            GroupManagerFilter
+        </filter-name>
+        <url-pattern>
+            /forum/create
+        </url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>
+            GroupFilter
+        </filter-name>
+        <url-pattern>
+            /forum/post
         </url-pattern>
     </filter-mapping>
     <welcome-file-list>
